# iio-apps-2024

./: README.md
Day2_apps/: CMakeLists.txt  main.c
Day3_apps/: CMakeLists.txt  functii.py  main.c  plot.py  read_voltage.c  shock.c  shock_buffer.c
buffer_day/: CMakeLists.txt  buffering.c
day1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  exercitiu1.sh  exercitiutempadc.sh  li.c  li.h  lib.c  lib.h  lib.h.gch  main.c  myproj  out
day1+2/: CMakeLists.txt
day2/: CMakeCache.txt  CMakeLists.txt  FPGAtempHandler  Makefile  adcBridge.c  adcBridge.h  adcToLedBridge.c  adcToLedBridge.h  cmake_install.cmake  file.c  findDev.c  findDev.h  ledBridge.c  ledBridge.h  main.c  main2.c  myproj  temp.c  temp.h
day2/voltage/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main1.c  myproj
day3/: CMakeLists.txt  main.c  main3.c  shock.c  shock_detection.c
day3.2/: CMakeLists.txt  main.c
day3.2/buld/: CMakeCache.txt  Makefile  cmake_install.cmake  myproj
day3/shock/: main.c
day3/shocks/: CMakeLists.txt  shock.c
day3/task1/: CMakeLists.txt  main.c
day3/task2/: main.c
day4/: CMakeLists.txt  main.c  main.py  main_buffer.c  plot.py  read_accel.c  read_buffer.c  read_voltage  read_voltage.c  shock.c  shock_buffer.c
day4.5/: main.c
day4/buffer_shock/: CMakeLists.txt  main.c
day4/task1/: main.c
day4/task2/: main.c
day4_2/: shock_buffer.c
day5/: app.py  functii.py  functions.py  main.py  plot.py
